# aces-high-core-py

./: .gitignore  pyproject.toml
.github/workflows/: cicd.yml  publish.yml
src/aces_high_core/: __init__.py  card.py  deck.py
tests/: test_card.py  test_deck.py
