[project]
name = "aces-high-core-py"
version = "0.1.0"
description = "Base library for card game logic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 120
